--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,21 +1,27 @@
-<h1>ブログ一覧</h1>
-
-<p><%= notice %></p>
-
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th></th>
-  </tr>
-
-<% @blogs.each do |blog| %>
-  <tr>
-    <td><%= blog.title %></td>
-    <td><%= blog.content %></td>
-    <td><%= link_to "ブログを編集する", edit_blog_path(blog.id) , data: { confirm: '本当に編集していいですか？' }%></td>
-    <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<%= link_to '新しくブログを投稿する', new_blog_path %>
+<div class="contents">
+  <h1>ブログ一覧</h1>
+  <p class="alert-info"><%= notice %></p>
+  <div class="row blog-title">
+    <div class="col-xs-5 col-md-2 col-md-offset-1">タイトル</div>
+    <div class="col-xs-7 col-md-6">内容</div>
+  </div>
+  <% @blogs.each do |blog| %>
+  <div class="row">
+    <div class="col-xs-5 col-md-2 col-md-offset-1 blog-content">
+      <%= blog.title %>
+    </div>
+    <div class="col-xs-7 col-md-6 blog-content">
+      <%= blog.content %>
+    </div>
+    <div class="col-xs-offset-7 col-xs-2 col-sm-offset-9 col-sm-1 col-md-offset-0 blog-button">
+      <%= link_to "編集", edit_blog_path(blog.id), class:'btn btn-default', data: { confirm: '本当に編集していいですか？' } %>
+    </div>
+    <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
+      <%= link_to '削除', blog_path(blog.id), class:'btn btn-default', method: :delete, data: { confirm: '本当に削除していいですか？' } %>
+    </div>
+  </div>
+  <% end %>
+  <div class="link-button">
+    <%= link_to '新規投稿', new_blog_path, class:'btn btn-default' %>
+  </div>
+</div>
