--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HerokuTestApp</title>
+    <title>bootstrap2</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+    <div class="container">
+      <header class="header">
+        <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+            <div id="gnavi" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><%= link_to "HOME", root_path %></li>
+                <li><%= link_to "投稿一覧", blogs_path %></li>
+                <li><%= link_to "新規投稿", new_blog_path %></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <%= yield %>
+      <footer class="footer">
+        <p>PHASE3 Bootstrap課題2</p>
+      <footer>
+    </div>
   </body>
 </html>
