--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Tops#index</h1>
-<p>Find me in app/views/tops/index.html.erb</p>
+<h1 class="top_p">PHASE3 Bootstrap課題2</h1>
+
+<div class="image-pc">
+  <%= image_tag 'pc.png' %>
+</div>
+<div class="image-sp">
+  <%= image_tag 'sp.png' %>
+</div>
+<p class="top_p">Bootstrapシリーズ課題2のアプリです。</p>
