--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,14 @@
           </div>
         </nav>
       </header>
-      <%= yield %>
-      <footer class="footer">
-        <p>PHASE3 Bootstrap課題2</p>
-      <footer>
     </div>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <p>PHASE3 Bootstrap課題2</p>
+      </div>
+    </footer>
   </body>
 </html>
