--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,10 @@
    margin-bottom:60px;
  }
 
+ .navbar{
+   border-radius: 0px;
+ }
+
  .contents{
    background-color: #fff;
    border: solid 1px #ccc;
@@ -78,7 +82,11 @@
    color:#fff;
    padding: 15px;
    position: absolute;
-   width: 100%;
    height:60px;
+   min-width: 100%;
    bottom:0;
  }
+
+/* .footer .container {
+   width: 100%;
+ }*/
