--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,19 +1,23 @@
 <div class="contents">
   <h1>ブログ一覧</h1>
   <p class="alert-info"><%= notice %></p>
+
   <div class="row blog-title">
     <div class="col-xs-5 col-md-2 col-md-offset-1">タイトル</div>
-    <div class="col-xs-7 col-md-6">内容</div>
+    <div class="col-xs-7 col-md-5">内容</div>
   </div>
   <% @blogs.each do |blog| %>
   <div class="row">
     <div class="col-xs-5 col-md-2 col-md-offset-1 blog-content">
       <%= blog.title %>
     </div>
-    <div class="col-xs-7 col-md-6 blog-content">
+    <div class="col-xs-7 col-md-5 blog-content">
       <%= blog.content %>
     </div>
-    <div class="col-xs-offset-7 col-xs-2 col-sm-offset-9 col-sm-1 col-md-offset-0 blog-button">
+    <div class="col-xs-offset-5 col-xs-2 col-sm-offset-8 col-sm-1 col-md-offset-0 blog-button">
+      <%= link_to '詳細', blog_path(blog.id), class:'btn btn-default' %>
+    </div>
+    <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
       <%= link_to "編集", edit_blog_path(blog.id), class:'btn btn-default', data: { confirm: '本当に編集していいですか？' } %>
     </div>
     <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
