--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
               <li><%= link_to "HOME", root_path %></li>
               <li><%= link_to "投稿一覧", blogs_path %></li>
               <li><%= link_to "新規投稿", new_blog_path %></li>
+            <% if logged_in? %>
+              <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
+            <% else %>
+              <li><%= link_to "ユーザー登録", new_user_path %></li>
+              <li><%= link_to "ログイン", new_session_path %></li>
+            <% end %>
             </ul>
           </div>
         </div>
