--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -17,12 +17,14 @@
     <div class="col-xs-offset-5 col-xs-2 col-sm-offset-8 col-sm-1 col-md-offset-0 blog-button">
       <%= link_to '詳細', blog_path(blog.id), class:'btn btn-default' %>
     </div>
-    <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
-      <%= link_to "編集", edit_blog_path(blog.id), class:'btn btn-default', data: { confirm: '本当に編集していいですか？' } %>
-    </div>
-    <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
-      <%= link_to '削除', blog_path(blog.id), class:'btn btn-default', method: :delete, data: { confirm: '本当に削除していいですか？' } %>
-    </div>
+    <% if blog.user_id == current_user.id %>
+      <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
+        <%= link_to "編集", edit_blog_path(blog.id), class:'btn btn-default', data: { confirm: '本当に編集していいですか？' } %>
+      </div>
+      <div class="col-xs-offset-0 col-xs-2 col-sm-offset-0 col-sm-1 col-md-offset-0 blog-button">
+        <%= link_to '削除', blog_path(blog.id), class:'btn btn-default', method: :delete, data: { confirm: '本当に削除していいですか？' } %>
+      </div>
+    <% end %>
   </div>
   <% end %>
   <div class="link-button">
