--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,6 +8,23 @@
     <div class="col-xs-1 col-xs-offset-2">内容:</div>
     <div class="col-xs-7"><%= @blog.content %></div>
   </div>
+  <% unless @blog.user == current_user %>
+    <% if @favorite.present? %>
+    <div class="row blog-info">
+      <div class="col-xs-1 col-xs-offset-2">
+        <%= link_to 'お気に入り解除する', favorite_path(blog_id: @blog.id), method: :delete, class: 'btn btn-danger' %>
+      </div>
+    </div>
+    <% else %>
+    <div class="row blog-info">
+      <div class="col-xs-1 col-xs-offset-2">
+        <div class="link-button">
+          <%= link_to 'お気に入りする', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
+        </div>
+      </div>
+    </div>
+    <% end %>
+  <% end %>
   <div class="link-button">
     <%= link_to "一覧", blogs_path, class: 'btn btn-default' %>
   </div>
