--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
               <li><%= link_to "投稿一覧", blogs_path %></li>
               <li><%= link_to "新規投稿", new_blog_path %></li>
             <% if logged_in? %>
+              <li><%= link_to "ユーザー詳細", user_path(current_user.id) %></li>
               <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
             <% else %>
               <li><%= link_to "ユーザー登録", new_user_path %></li>
