--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,23 @@
-<h1><%= @user.name %>のページ</h1>
+<div class="contents">
+  <h1><%= @user.name %>のページ</h1>
 
-<p>メールアドレス: <%= @user.email %></p>
+  <div class="row">
+    <div class="col-xs-5 col-md-2 col-md-offset-2">メールアドレス:</div>
+    <div class="col-xs-7 col-md-6"><%= @user.email %></div>
+  </div>
+  <h2>お気に入り一覧</h2>
+  <div class="row blog-title">
+    <div class="col-xs-5 col-md-2 col-md-offset-2">タイトル</div>
+    <div class="col-xs-7 col-md-6">内容</div>
+  </div>
+  <% @favorites_blogs.each do |blog| %>
+  <div class="row">
+    <div class="col-xs-5 col-md-2 col-md-offset-2 blog-content">
+      <%= blog.title %>
+    </div>
+    <div class="col-xs-7 col-md-6 blog-content">
+      <%= blog.content %>
+    </div>
+  </div>
+  <% end %>
+</div>
