--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bootstrap2</title>
+    <title>DIC task</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -39,7 +39,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <p>PHASE3 Bootstrap課題2</p>
+        <p>DIC 課題</p>
       </div>
     </footer>
   </body>
