--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="top_p">PHASE3 Bootstrap課題2</h1>
+<h1 class="top_p">DIC課題</h1>
 
 <div class="image-pc">
   <%= image_tag 'pc.png' %>
@@ -6,4 +6,4 @@
 <div class="image-sp">
   <%= image_tag 'sp.png' %>
 </div>
-<p class="top_p">Bootstrapシリーズ課題2のアプリです。</p>
+<p class="top_p">提出課題用のアプリです。</p>
