--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,6 +8,10 @@
     <div class="col-xs-1 col-xs-offset-2">内容:</div>
     <div class="col-xs-7"><%= @blog.content %></div>
   </div>
+  <div class="row blog-info">
+    <div class="col-xs-1 col-xs-offset-2">画像:</div>
+    <div class="col-xs-7"><%= image_tag @blog.image %></div>
+  </div>
   <% unless @blog.user == current_user %>
     <% if @favorite.present? %>
     <div class="row blog-info">
