--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
   <h1><%= @user.name %>のページ</h1>
 
   <div class="row">
-    <div class="col-xs-5 col-md-2 col-md-offset-2">メールアドレス:</div>
-    <div class="col-xs-7 col-md-6"><%= @user.email %></div>
+    <div class="col-xs-5 col-md-2 col-md-offset-2 user-info">メールアドレス:</div>
+    <div class="col-xs-7 col-md-6 user-info"><%= @user.email %></div>
+    <div class="col-xs-5 col-md-2 col-md-offset-2 user-info">プロフィール画像:</div>
+    <div class="col-xs-7 col-md-6 user-info"><%= image_tag @user.image %></div>
   </div>
   <h2>お気に入り一覧</h2>
   <div class="row blog-title">
